<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.topformadailyschedule.MainActivity"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cetvrtok" 
        android:textColor="@color/purple"
        android:textSize="14dp"
        android:background="@drawable/custom_bakcground_day"/>

    <!-- THURSDAY 10:30 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:minHeight="70dp">
    	
    	<!-- BUTTON THURSDAY 10:30 TIME -->
    	<Button 
    	    android:id="@+id/button2"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_time"
    	    android:text="10:30"
    	    android:textColor="@color/green"
    	    android:textStyle="bold"
    	    android:minWidth="70dp"
    	    android:textSize="20dp"/>
    	
    	<!-- BUTTON THURSDAY 10:30 TRAINING -->
    	<Button 
    	    android:id="@+id/buttonThu1030"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_training"
    	    android:text="@string/aerobic_metabolic"
    	    android:textColor="@color/white"
    	    android:textStyle="bold"
    	    android:layout_marginLeft="5dp"
    	    android:onClick="showMessage"
    	    android:textSize="20dp"/>
    </LinearLayout>
    
    <!-- HORIZONTAL LINE -->
    <Button 
    	    android:id="@+id/buttonThu1800"
    	    android:layout_width="fill_parent"
    	    android:layout_height="5dp"
    	    android:background="@drawable/custom_background_training"
    	    android:text=""
    	    android:textColor="@color/white"
    	    android:textStyle="bold"
    	    android:layout_marginLeft="5dp"
    	    android:layout_marginTop="10dp"
    	    android:layout_marginRight="5dp"/>
    
    <!-- THURSDAY 18:00 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:minHeight="70dp">
    	
    	<!-- BUTTON THURSDAY 18:00 TIME -->
    	<Button 
    	    android:id="@+id/button3"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_time"
    	    android:text="18:00"
    	    android:textColor="@color/green"
    	    android:textStyle="bold"
    	    android:minWidth="70dp"
    	    android:textSize="20dp"/>
    	
    	<!-- BUTTON THURSDAY 18:00 TRAINING -->
    	<Button 
    	    android:id="@+id/buttonThu1800"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_training"
    	    android:text="@string/ball_pilates"
    	    android:textColor="@color/white"
    	    android:textStyle="bold"
    	    android:layout_marginLeft="5dp"
    	    android:onClick="showMessage"
    	     android:textSize="20dp"/>
    </LinearLayout>
    
    <!-- THURSDAY 19:00 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:minHeight="70dp">
    	
    	<!-- BUTTON THURSDAY 19:00 TIME -->
    	<Button 
    	    android:id="@+id/button3"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_time"
    	    android:text="19:00"
    	    android:textColor="@color/green"
    	    android:textStyle="bold"
    	    android:minWidth="70dp"
    	    android:textSize="20dp"/>
    	
    	<!-- BUTTON THURSDAY 19:00 TRAINING -->
    	<Button 
    	    android:id="@+id/buttonThu1900"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_training"
    	    android:text="@string/aerobic_body_combat"
    	    android:textColor="@color/white"
    	    android:textStyle="bold"
    	    android:layout_marginLeft="5dp"
    	    android:onClick="showMessage"
    	    android:textSize="20dp"/>
    </LinearLayout>
    
    <!-- THURSDAY 20:00 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:minHeight="70dp">
    	
    	<!-- BUTTON THURSDAY 20:00 TIME -->
    	<Button 
    	    android:id="@+id/button3"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_time"
    	    android:text="20:00"
    	    android:textColor="@color/green"
    	    android:textStyle="bold"
    	    android:minWidth="70dp"
    	    android:textSize="20dp"/>
    	
    	<!-- BUTTON THURSDAY 20:00 TRAINING -->
    	<Button 
    	    android:id="@+id/buttonThu2000"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:background="@drawable/custom_background_training"
    	    android:text="@string/zumba"
    	    android:textColor="@color/white"
    	    android:textStyle="bold"
    	    android:layout_marginLeft="5dp"
    	    android:onClick="showMessage"
    	    android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>

